Fixing regressions, bugs and tweaking the UI.

--- a/stylesheets/treemap.less
+++ b/stylesheets/treemap.less
@@ -43,6 +43,12 @@
   cursor: pointer;
 }
 
+.infoviz-treemap-enterable-node:hover {
+  .infoviz-treemap-node-label {
+    text-decoration:underline;
+  }
+}
+
 .infoviz-treemap {
   width: 450px;
   height: 320px;
