--- a/templates/_dataTableViz_treemap.twig
+++ b/templates/_dataTableViz_treemap.twig
@@ -1,3 +1,3 @@
-<div class="infoviz-treemap" data-data="{{ generator.generate(dataTable)|json_encode }}">
+<div class="infoviz-treemap" data-data="{{ generator.generate(dataTable)|json_encode }}" {% if availableHeight|default is not empty %}style="height:{{ availableHeight }}px"{% endif %}>
     <img class="infoviz-treemap-zoom-out" style="visibility:hidden;" src="plugins/Zeitgeist/images/zoom-out.png"/>
 </div>
