--- a/stylesheets/treemapColors.less
+++ b/stylesheets/treemapColors.less
@@ -1,5 +1,5 @@
 .infoviz-treemap-evolution-colors[data-name=no-change] {
-  color: #333;
+  color: #ccc;
 }
 
 .infoviz-treemap-evolution-colors[data-name=negative-change-max] {
@@ -16,4 +16,12 @@
 
 .infoviz-treemap-colors[data-name=header-color] {
   color: white;
+}
+
+.infoviz-treemap-colors[data-name=header-background-color] {
+  color: #6a6a6a;
+}
+
+.infoviz-treemap-colors[data-name=normal-node-color] {
+  color: #ccc;
 }
