Fix a color regression & automatic sizing regression for full width reports.

--- a/stylesheets/treemapColors.less
+++ b/stylesheets/treemapColors.less
@@ -1,5 +1,5 @@
 .infoviz-treemap-evolution-colors[data-name=no-change] {
-  color: #ccc;
+  color: #444;
 }
 
 .infoviz-treemap-evolution-colors[data-name=negative-change-max] {
